--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: url('https://images.unsplash.com/photo-1546015720-b8b30df5aa27?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80') center/cover no-repeat;
+      background: url('https://i.postimg.cc/5N59mhkQ/Whats-App-Image-2025-05-10-at-02-11-11-76e3ea78.jpg') center/cover no-repeat;
       opacity: 0.15;
       transition: all 0.5s ease;
     }
