--- a/index.html
+++ b/index.html
@@ -1684,7 +1684,7 @@
                 </div>
                 <div>
                   <div class="contact-label">هاتف:</div>
-                  <div>0781031733</div>
+                  <div></div>
                 </div>
               </div>
               
@@ -1782,7 +1782,7 @@
               <div class="footer-contact-icon">
                 <i class="fa-solid fa-phone"></i>
               </div>
-              <span>0781031733</span>
+              <span></span>
             </li>
             <li class="footer-contact-item">
               <div class="footer-contact-icon">
