fixing the email getting out of frame on mobile

--- a/index.html
+++ b/index.html
@@ -1694,7 +1694,12 @@
                 </div>
                 <div>
                   <div class="contact-label">البريد الإلكتروني:</div>
-                  <div>Hashemtovolunteer@gmail.com</div>
+                  <div>
+                    <a href="mailto:Hashemtovolunteer@gmail.com" 
+                    style="color: rgb(255, 255, 255);">
+                    Email Us
+                  </a>
+                  </div>
                 </div>
               </div>
               
